Fix (ugly) scrollbar for labels filter tool

--- a/client/app/styles/components/_drawer.styl
+++ b/client/app/styles/components/_drawer.styl
@@ -20,6 +20,7 @@
 
         .tool-labels
             flex 1
+            overflow-y auto
 
         legend
         button
@@ -46,10 +47,6 @@
             color          grey-05
             font-size      14px
             text-transform uppercase
-
-        nav
-            height     100%
-            overflow-y auto
 
         label
             display           flex
